# QML-Spatial-UI

./: .clang-format  .cmake-format  .gitignore  .qmlformat.ini  CMakeLists.txt  Makefile  README.md  build-web.sh  build.sh
.github/workflows/: build-deploy-demo.yml  build-deploy-wasm-demo.yml  build-share-wasm-demo.yml
QtQuick3D/Tools/: CMakeLists.txt  SpatialItem.qml
SpatialUI/: CMakeLists.txt  SpatialItem.qml  SpatialOrbitController.qml
example/: CMakeLists.txt  Human.qml  MainScene.qml  OrbitCameraControllerCustom.qml  build-web.sh  build.sh  main.cpp
example/meshes/: human.mesh  sphere_001_Sphere_mesh.mesh
qtquick3d/tools/: CMakeLists.txt
